--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 [dependencies]
 dioxus = { version = "0.6.0", features = [] }
 once_cell = "1.21.3"
-reqwest = { version = "0.12.20", features = ["json"] }
+reqwest = { version = "0.12.20", features = ["json", ] }
+serde = "1.0.219"
+serde_json = "1.0.140"
 
 [features]
 default = ["desktop"]
