--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.11.0"
-sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
+sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "sqlx-sqlite"] }
 tokio = {version = "1.45.1", features = ["full"]}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.140"
 actix-cors = "0.7.1"
+reqwest = { version = "0.12.20", features = ["json"] }
+anyhow = "1.0.98"
+dotenvy = "0.15.7"
