--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { version = "0.6.0", features = [] }
+dioxus = { version = "0.6.0", features = ["router"] }
 once_cell = "1.21.3"
 reqwest = { version = "0.12.20", features = ["json", ] }
 serde = "1.0.219"
