--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 base64 = "0.22.1"
 dioxus = { version = "0.6.0", features = ["router"] }
+dirs = "6.0.0"
 once_cell = "1.21.3"
 reqwest = { version = "0.12.20", features = ["json", ] }
 serde = "1.0.219"
